--- a/base_learn/book1/ch6_1.ipynb
+++ b/base_learn/book1/ch6_1.ipynb
@@ -1,204 +1,61 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 一、准备工作"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "numpy的版本为1.20.3\n",
-      "seaborn的版本为: 0.11.2\n",
-      "pandas的版本为: 1.3.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from pathlib import PurePath, Path\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "from my_setting import my_pd_setting, my_np_setting, my_sns_setting, data_path\n",
-    "from my_stat import missing\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from sklearn.pipeline import Pipeline, make_pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.decomposition import PCA \n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "\n",
-    "my_np_setting()\n",
-    "my_sns_setting()\n",
-    "my_pd_setting()\n"
+    "from sklearn.model_selection import StratifiedKFold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "当前数据路径为: C:\\Users\\86199\\Documents\\Datas\\Mechine_learing\\book1\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: left;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>18</th>\n",
-       "      <th>19</th>\n",
-       "      <th>20</th>\n",
-       "      <th>21</th>\n",
-       "      <th>22</th>\n",
-       "      <th>23</th>\n",
-       "      <th>24</th>\n",
-       "      <th>25</th>\n",
-       "      <th>26</th>\n",
-       "      <th>27</th>\n",
-       "      <th>28</th>\n",
-       "      <th>29</th>\n",
-       "      <th>30</th>\n",
-       "      <th>31</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>842302</td>\n",
-       "      <td>M</td>\n",
-       "      <td>17.99</td>\n",
-       "      <td>10.38</td>\n",
-       "      <td>122.8</td>\n",
-       "      <td>1001.0</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>1.09</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>8.59</td>\n",
-       "      <td>153.40</td>\n",
-       "      <td>6.40e-03</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>6.19e-03</td>\n",
-       "      <td>25.38</td>\n",
-       "      <td>17.33</td>\n",
-       "      <td>184.6</td>\n",
-       "      <td>2019.0</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>0.27</td>\n",
-       "      <td>0.46</td>\n",
-       "      <td>0.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>842517</td>\n",
-       "      <td>M</td>\n",
-       "      <td>20.57</td>\n",
-       "      <td>17.77</td>\n",
-       "      <td>132.9</td>\n",
-       "      <td>1326.0</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.54</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>3.40</td>\n",
-       "      <td>74.08</td>\n",
-       "      <td>5.22e-03</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>3.53e-03</td>\n",
-       "      <td>24.99</td>\n",
-       "      <td>23.41</td>\n",
-       "      <td>158.8</td>\n",
-       "      <td>1956.0</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   0      1   2      3      4      5       6     7     8     9     10    11    \\\n",
-       "0  842302  M  17.99  10.38  122.8  1001.0  0.12  0.28  0.30  0.15  0.24  0.08   \n",
-       "1  842517  M  20.57  17.77  132.9  1326.0  0.08  0.08  0.09  0.07  0.18  0.06   \n",
-       "\n",
-       "   12    13    14    15      16        17    18    19    20    21        \\\n",
-       "0  1.09  0.91  8.59  153.40  6.40e-03  0.05  0.05  0.02  0.03  6.19e-03   \n",
-       "1  0.54  0.73  3.40   74.08  5.22e-03  0.01  0.02  0.01  0.01  3.53e-03   \n",
-       "\n",
-       "   22     23     24     25      26    27    28    29    30    31    \n",
-       "0  25.38  17.33  184.6  2019.0  0.16  0.67  0.71  0.27  0.46  0.12  \n",
-       "1  24.99  23.41  158.8  1956.0  0.12  0.19  0.24  0.19  0.28  0.09  "
-      ]
+      "text/plain": "         0  1      2      3       4       5        6        7       8   \\\n0    842302  M  17.99  10.38  122.80  1001.0  0.11840  0.27760  0.3001   \n1    842517  M  20.57  17.77  132.90  1326.0  0.08474  0.07864  0.0869   \n2  84300903  M  19.69  21.25  130.00  1203.0  0.10960  0.15990  0.1974   \n3  84348301  M  11.42  20.38   77.58   386.1  0.14250  0.28390  0.2414   \n4  84358402  M  20.29  14.34  135.10  1297.0  0.10030  0.13280  0.1980   \n\n        9   ...     22     23      24      25      26      27      28      29  \\\n0  0.14710  ...  25.38  17.33  184.60  2019.0  0.1622  0.6656  0.7119  0.2654   \n1  0.07017  ...  24.99  23.41  158.80  1956.0  0.1238  0.1866  0.2416  0.1860   \n2  0.12790  ...  23.57  25.53  152.50  1709.0  0.1444  0.4245  0.4504  0.2430   \n3  0.10520  ...  14.91  26.50   98.87   567.7  0.2098  0.8663  0.6869  0.2575   \n4  0.10430  ...  22.54  16.67  152.20  1575.0  0.1374  0.2050  0.4000  0.1625   \n\n       30       31  \n0  0.4601  0.11890  \n1  0.2750  0.08902  \n2  0.3613  0.08758  \n3  0.6638  0.17300  \n4  0.2364  0.07678  \n\n[5 rows x 32 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>8</th>\n      <th>9</th>\n      <th>...</th>\n      <th>22</th>\n      <th>23</th>\n      <th>24</th>\n      <th>25</th>\n      <th>26</th>\n      <th>27</th>\n      <th>28</th>\n      <th>29</th>\n      <th>30</th>\n      <th>31</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>842302</td>\n      <td>M</td>\n      <td>17.99</td>\n      <td>10.38</td>\n      <td>122.80</td>\n      <td>1001.0</td>\n      <td>0.11840</td>\n      <td>0.27760</td>\n      <td>0.3001</td>\n      <td>0.14710</td>\n      <td>...</td>\n      <td>25.38</td>\n      <td>17.33</td>\n      <td>184.60</td>\n      <td>2019.0</td>\n      <td>0.1622</td>\n      <td>0.6656</td>\n      <td>0.7119</td>\n      <td>0.2654</td>\n      <td>0.4601</td>\n      <td>0.11890</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>842517</td>\n      <td>M</td>\n      <td>20.57</td>\n      <td>17.77</td>\n      <td>132.90</td>\n      <td>1326.0</td>\n      <td>0.08474</td>\n      <td>0.07864</td>\n      <td>0.0869</td>\n      <td>0.07017</td>\n      <td>...</td>\n      <td>24.99</td>\n      <td>23.41</td>\n      <td>158.80</td>\n      <td>1956.0</td>\n      <td>0.1238</td>\n      <td>0.1866</td>\n      <td>0.2416</td>\n      <td>0.1860</td>\n      <td>0.2750</td>\n      <td>0.08902</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>84300903</td>\n      <td>M</td>\n      <td>19.69</td>\n      <td>21.25</td>\n      <td>130.00</td>\n      <td>1203.0</td>\n      <td>0.10960</td>\n      <td>0.15990</td>\n      <td>0.1974</td>\n      <td>0.12790</td>\n      <td>...</td>\n      <td>23.57</td>\n      <td>25.53</td>\n      <td>152.50</td>\n      <td>1709.0</td>\n      <td>0.1444</td>\n      <td>0.4245</td>\n      <td>0.4504</td>\n      <td>0.2430</td>\n      <td>0.3613</td>\n      <td>0.08758</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>84348301</td>\n      <td>M</td>\n      <td>11.42</td>\n      <td>20.38</td>\n      <td>77.58</td>\n      <td>386.1</td>\n      <td>0.14250</td>\n      <td>0.28390</td>\n      <td>0.2414</td>\n      <td>0.10520</td>\n      <td>...</td>\n      <td>14.91</td>\n      <td>26.50</td>\n      <td>98.87</td>\n      <td>567.7</td>\n      <td>0.2098</td>\n      <td>0.8663</td>\n      <td>0.6869</td>\n      <td>0.2575</td>\n      <td>0.6638</td>\n      <td>0.17300</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>84358402</td>\n      <td>M</td>\n      <td>20.29</td>\n      <td>14.34</td>\n      <td>135.10</td>\n      <td>1297.0</td>\n      <td>0.10030</td>\n      <td>0.13280</td>\n      <td>0.1980</td>\n      <td>0.10430</td>\n      <td>...</td>\n      <td>22.54</td>\n      <td>16.67</td>\n      <td>152.20</td>\n      <td>1575.0</td>\n      <td>0.1374</td>\n      <td>0.2050</td>\n      <td>0.4000</td>\n      <td>0.1625</td>\n      <td>0.2364</td>\n      <td>0.07678</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 32 columns</p>\n</div>"
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filepath = r'C:\\Users\\86199\\Documents\\Datas\\Mechine_learing\\book1'\n",
-    "data_path(filepath)\n",
-    "df = pd.read_csv('wdbc.csv', header=None)\n",
-    "df.head(2)"
+    "data_path, data_name = './data', 'wdbc.csv'\n",
+    "filename = PurePath(Path(data_path), Path(data_name))\n",
+    "df = pd.read_csv(filename, header=None)\n",
+    "df.head()"
    ]
   },
   {
@@ -226,7 +83,7 @@
     "y_l = la.fit_transform(y)\n",
     "print(len(y1))\n",
     "print(f'''y包含的类标签为:  {la.classes_}''')\n",
-    "print(f'''列表['M', 'B']的编码情况为:   {la.transform(['M','B'])}''')\n"
+    "print(f'''列表['M', 'B']的编码情况为:   {la.transform(['M','B'])}''')"
    ]
   },
   {
